# vhs-as-a-service

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yaml  pluto  pyproject.toml  ruff.toml  vhsaas
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 043051aed244_update_user_table.py  a260d3799d2c_added_user_table.py
app/: config.py  database.py  exceptions.py  fields.py  main.py
app/api/v1/: __init__.py  router.py
app/core/: config.py  exceptions.py  handlers.py  security.py
app/database/: session.py
app/database/alembic/: env.py
app/database/bootstrap/: seed.py  setup.sql  setup.sql.template
app/database/infrastructure/: base.py  models.py  session.py
app/database/seeders/: boostrap.py  bootstrap.py  create_roles.py  create_super_user.py
app/database/sql/: 2025_12_14_1854_hardening.sql  2025_12_14_1910_move_tables.sql  2025_12_14_1915_create_users.sql.template  2025_12_14_2108_move_alembic_table.sql
app/dependencies/: auth.py
app/domains/: __init__.py
app/domains/auth/: dependencies.py  router.py  schemas.py
app/domains/roles/: repository.py  schemas.py
app/domains/users/: crud.py  router.py  schemas.py
app/migrations/alembic/: env.py
app/models/: __init__.py  movie.py  rental.py  role.py  user.py
app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
app/modules/movie/: contracts.py  model.py  repository.py  router.py  schemas.py  service.py
app/modules/movies/: contracts.py  model.py  repository.py  schemas.py  service.py
app/modules/rental/: contracts.py  model.py  repository.py  (+3 more)
app/operations/: role.py  user.py
app/routers/: __init__.py  token.py  user.py
app/schemas/: user.py
docs/: database-migrations.md
scripts/: create_migration.sh  run_sql.sh  start_db.sh
tests/: conftest.py  test_common.py  test_config.py
tests/app/: test_config.py
tests/core/: test_config.py  test_security.py
tests/database/: test_bootstrap.py
tests/factories/: movie.py  rental.py  role.py  user.py
tests/fakes/: repository.py
(+90 files in other folders)
