[project]
name = "pluto"
version = "0.1.0"
description = "Managing personal finance through a REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.121.2",
    "passlib[argon2]>=1.7.4",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "shellcheck-py>=0.11.0.1",
    "shfmt-py>=3.12.0.2",
    "ty>=0.0.11",
    "types-passlib>=1.7.7.20250602",
]

[tool.deptry]
extend_exclude=["^.tests/"]
known_first_party=["app"]

[tool.deptry.per_rule_ignores]
DEP002=["pre-commit", "psycopg2-binary"]
